[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provider-chain"
version = "1.0.0"
description = "Task-aware LLM provider chain with N-tier fallback (Gemini / Groq / DeepSeek / OpenRouter / Ollama)"
authors = [{name = "Li-Cheng Zheng"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["llm", "fallback", "provider-chain", "groq", "gemini", "deepseek", "openrouter", "ollama", "ner", "summarization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.urls]
Repository = "https://github.com/Yeimaoz/provider-chain"
Issues = "https://github.com/Yeimaoz/provider-chain/issues"
Changelog = "https://github.com/Yeimaoz/provider-chain/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/provider_chain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
